bg-att to local to fix bg jump

--- a/style.css
+++ b/style.css
@@ -55,9 +55,10 @@ a:visited {
   height: 70vh;
   width: 97vw;
   background-color: black;
-  background-image: url('./pics/vesselCode_tilt_part.jpg');
+  /* background-image: url('./pics/vesselCode_tilt_part.jpg'); */
+  background-image: url('https://www.codebypete.com/pics/vesselCode_tilt_part.jpg');
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: local;
   box-shadow: 0px 0px 5vmin 5vmin dimgray inset;
   color: silver;
 }
